# coding_challenges

./: .commit_submodules.sh  .gitmodules  README.md
amazon/: index.js
bonusly/: bonusly.js
bowery/: index.js  iskandar.js
ceros/: Procfile  README.md  notes.md  package.json  web.js  webpack.config.js
ceros/src/: index.html  index.js
ceros/src/components/: canvas.js  game.js  index.js  obstacle.js  rhino.js  skier.js
ceros/src/services/: asset-loader.js  controls.js  index.js  position.js  scoreboard.js
ceros/test/: ski.test.js
citrusbyte/: citrusbyte.js
collectly/: Dockerfile  db_optimization.fql  docker-compose.yml  palindrome_confusion.ts
collectly/patient_billing_api/: pyproject.toml
collectly/patient_billing_api/patient_billing_api/: app.py  models.py
dropbox/: README.md  main.js
eatclub/: eatclubjs
falconx/: App.js
filmhub/: backend.js  frontend.md
finch/react-ts/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.build.js  webpack.common.js
finch/react-ts/src/: bootstrap.js  firebase-messaging-sw.js  manifest.json
google/: trie_data_structure.md
gradient/: index.js
gun.io/: epigram.js  fibonacci.js  legionaries.js  palindrome.js
hired/: angles.js
hola/: hola.test.js
medme/: coder_byte.js
neat/: index.js
nextdoor/: package-lock.json
nextdoor/algos/: commentTree.js  numberGames.js
nextdoor/frontend/: main.jsx
ombud/: fincensus.md  prompt.md
plaid/: index.js
pymetrics/: index.js
quo/: index.js
tendril/: behavior-screen.md
uplift/: test.js
usds/: index.js
woven/: woven.js
(+23 files in other folders)
