[tool.poetry]
name = "patient-billing-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.2"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
